Implement console
